--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64 = "0.22.0"
 clap = { version = "4.5.4", features = ["derive"] }
+fernet = "0.2.1"
 ring = "0.17.8"
