cargo toml file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "filecrypt"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/root27/filecrypt"
+description = "Encrypt and decrypt files using Fernet symmetric encryption"
+license = "MIT"
+keywords = ["encryption", "fernet", "file", "cli"]
+authors = ["root27"]
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
