--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,11 +43,16 @@ jobs:
         strategy:
             matrix:
                 include:
-                    - name: Linux
+                    - target: x86_64-unknown-linux-gnu
                       os: ubuntu-latest
                       
-                    - name: macOS
+                    - target: x86_64-apple-darwin
                       os: macos-latest
+                    
+                    - target: aarch64-apple-darwin
+                      os: macos-latest
+                    
+                    
                       
         runs-on: ${{ matrix.os }}
         steps:
