--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,8 @@ jobs:
             - uses: actions/checkout@v4
             - uses: taiki-e/upload-rust-binary-action@v1
               with:
+
+                ref: refs/tags/v0.1.4
                
                 bin: filecrypt
                
