--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,15 +48,17 @@ jobs:
             matrix:
                 include:
                     - target: x86_64-unknown-linux-gnu
+                      os: ubuntu-latest
                       
                       
                     - target: x86_64-apple-darwin
+                      os: x86_64-apple-darwin
                     
                     - target: aarch64-apple-darwin
-                    
+                      os: aarch64-apple-darwin                    
                     
                       
-        runs-on: ubuntu-latest
+        runs-on: ${{ matrix.os }}
         steps:
             - uses: actions/checkout@v4
             - uses: taiki-e/upload-rust-binary-action@v1
