--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,18 +49,27 @@ jobs:
                 include:
                     - target: x86_64-unknown-linux-gnu
                       os: ubuntu-latest
-                      
+                    
+                    - target: aarch64-unknown-linux-gnu
+                      os: ubuntu-latest  
                       
                     - target: x86_64-apple-darwin
-                      os: x86_64-apple-darwin
+                      os: macos-latest
                     
                     - target: aarch64-apple-darwin
-                      os: aarch64-apple-darwin                    
-                    
+                      os: macos-latest   
                       
+                    - target: x86_64-pc-windows-msvc
+                      os: windows-latest
+                    
         runs-on: ${{ matrix.os }}
         steps:
             - uses: actions/checkout@v4
+            - name: Install cross compilation
+              uses: taiki-e/setup-cross-toolchain-action@v1
+              with:
+                target: ${{ matrix.target }}
+              if: startsWith(matrix.os, 'ubuntu')
             - uses: taiki-e/upload-rust-binary-action@v1
               with:
 
