--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
                     - target: x86_64-apple-darwin
                       os: macos-latest
                       
-                    - target: x86_64-pc-windows-gnu
+                    - target: x86_64-pc-windows-msvc
                       os: windows-latest
                     
         runs-on: ${{ matrix.os }}
