--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,28 @@ readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[target.aarch64-unknown-linux-gnu]
+
+pre-build = [
+  "dpkg --add-architecture $CROSS_DEB_ARCH",
+  "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
+]
+
+[target.aarch64-apple-darwin]
+
+pre-build = [
+  "brew install openssl"
+]
+
+[target.x86_64-windows-gnu]
+
+pre-build = [
+    "choco install openssl"
+]
+
+
+
+
 [dependencies]
 base64 = "0.22.0"
 clap = { version = "4.5.4", features = ["derive"] }
