--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,32 +4,29 @@ on:
     push:
         tags:
             - "*"
-        branches:
-            - master
-
 
 jobs:
-    # build:
-    #     runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
 
-    #     steps:
-    #         - uses: actions/checkout@v2
+        steps:
+            - uses: actions/checkout@v2
 
-    #         - name: Install Rust
-    #           uses: actions-rs/toolchain@v1
-    #           with:
-    #               toolchain: stable
-    #               override: true
+            - name: Install Rust
+              uses: actions-rs/toolchain@v1
+              with:
+                  toolchain: stable
+                  override: true
 
-    #         - name: Build
-    #           run: cargo build --release
+            - name: Build
+              run: cargo build --release
 
-    #         - name: Publish
-    #           run: |
-    #             cargo publish --token ${{ secrets.CARGO_TOKEN }}
+            - name: Publish
+              run: |
+                cargo publish --token ${{ secrets.CARGO_TOKEN }}
 
-    #           env:
-    #                 CARGO_TOKEN: ${{ secrets.CARGO_TOKEN }}
+              env:
+                    CARGO_TOKEN: ${{ secrets.CARGO_TOKEN }}
 
     create-release:
         runs-on: ubuntu-latest
